<resources>
    <string name="app_name">RxJavaandDaggerHomework</string>
    <string name="no_internet_message">No Internet connection. Please connect to the internet to see more.</string>
    <string name="description">Description</string>
    <string name="language">Language</string>
    <string name="collaborators">Collaborators</string>
    <string name="contributors">Contributors</string>
    <string name="url">URL</string>
</resources>