<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_palette"
    >

    <TextView
        android:id="@+id/git_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="42sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name"
        android:fontFamily="@font/crimson_text_bold"/>
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/crimson_text_regular"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/git_details_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/description"/>

    <TextView
        android:id="@+id/description_response"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        tools:text="Text goes here"
        android:fontFamily="@font/crimson_text_italic"
        android:textSize="16sp"
        android:background="#11111111"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/crimson_text_regular"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/description_response"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/language" />

    <TextView
        android:id="@+id/language_response"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        tools:text="Text goes here"
        android:fontFamily="@font/crimson_text_italic"
        android:textSize="16sp"
        android:background="#11111111"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language" />
    <TextView
        android:id="@+id/collaborators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/crimson_text_regular"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/language_response"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/collaborators"/>

    <TextView
        android:id="@+id/collab_response"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        tools:text="Text goes here"
        android:fontFamily="@font/crimson_text_italic"
        android:textSize="16sp"
        android:background="#11111111"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collaborators" />
    <TextView
        android:id="@+id/contributors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/crimson_text_regular"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/collab_response"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/contributors"/>

    <TextView
        android:id="@+id/contributors_response"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        tools:text="Text goes here"
        android:fontFamily="@font/crimson_text_italic"
        android:textSize="16sp"
        android:background="#11111111"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contributors" />
    <TextView
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/crimson_text_regular"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/contributors_response"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/url"/>

    <TextView
        android:id="@+id/url_response"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        tools:text="Text goes here"
        android:fontFamily="@font/crimson_text_italic"
        android:textSize="16sp"
        android:background="#11111111"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/url" />


</androidx.constraintlayout.widget.ConstraintLayout>